# metis-framework

./: .gitattributes  .gitignore  .gitleaksignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPLIT.md  pyproject.toml
.codex/: hooks.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: baseline-ci.yml  core-ci.yml
ClaudeCode/: mirror-manifest.json  settings.shared.json
ClaudeCode/hooks/: hook-alerts.sh  hook-docs-index-nudge.sh  hook-metis-surface.sh  (+8 more)
config/: infrastructure.json
docs/: PRODUCTIZATION.md  QUICKSTART.md  design-guidelines.md  harness-primitives.md
navore/: README.md
scripts/: add-healthcheck.py  agent-work.py  ai-merge-resolver.py  archive-done-tasks.py  archive-tasks.py  auto-checkpoint-on-close.sh  backfill-task-board-fields.py  backfill-task-origins.py  backfill-task-projects.py  bootstrap-claude-memory.sh  check-memory-limits.sh  check-sync-drift.sh  close-boundary-advance.sh  close-integrity-check.sh  close-lock.sh  close-push.sh  close-tasks.sh  commit-or-intent.sh  context-budget-check.py  coverage-lint.py  decide.py  decision-record.py  ensure-autosync-loaded.sh  ensure-self-heal-loaded.sh  free-work.py  git-lock.sh  gitignore-lint.sh  init-board.py  install-scripts.sh  install-self-heal-agent.sh  launchagent-claude-task.plist.template  link-milestones.py  merge-lease-state.sh  merge-taskstate.py  migrate-nnn-to-governed.py  mirror.py  openclaw-git-sync.sh  priorities-selftest.py  priorities.py  queue-runner.py  (+34 more)
(+381 files in other folders)
